Fixed the alignment issues and added whatsapp icon

--- a/wp-content/themes/oldcare/css/style68b368b3.css
+++ b/wp-content/themes/oldcare/css/style68b368b3.css
@@ -16051,7 +16051,10 @@ p.fic {
 
 .iconsociaf {
   color: #ffffff;
-  font-size: 25px; }
+  font-size: 18px;
+  position: relative;
+  top: -6px;
+ }
 
 input#submit {
   height: 70px;
@@ -17213,7 +17216,7 @@ input#wp-block-search__input-1 {
     margin-top: -37px;
     padding: 0;
     font-size: 2rem;
-    justify-content: center; }
+    justify-content: flex-start; }
 
   .bgcirc:before {
     position: absolute;
